# etl_pipeline_with_claude

./: .gitignore  HANDOVER.md  README.md  TESTING.md
etl-cluster/: docker-compose-kafka.yaml  docker-compose-minio.yaml  docker-compose-postgresql.yaml  docker-compose-spark.yaml  startAllCluster.sh  stopAllCluster.sh
etl-cluster/unused/: docker-compose-flink.yaml
iot-pipeline/: README.md
iot-pipeline/config/: init-postgresql.sql
iot-pipeline/generator/: pyproject.toml  sensor_producer.py  startGenerator.sh
iot-pipeline/spark-jobs/: README.md
iot-pipeline/spark-jobs/pyspark-jobs/: batch_aggregation.py  pyproject.toml
scripts/: create-kafka-topic.sh  create-minio-bucket.sh  setup.sh  teardown.sh
spark-fastapi/: .coverage  .env  README.md  pyproject.toml  pytest.ini  startFastApi.sh
spark-fastapi-ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  startUI.sh  vitest.config.ts
spark-fastapi/app/: main.py
spark-fastapi/app/api/: router.py
spark-fastapi/app/api/endpoints/: cluster.py  jobs.py
spark-fastapi/app/core/: __init__.py  config.py
spark-fastapi/app/schemas/: cluster.py  job.py
spark-fastapi/app/services/: spark_client.py
spark-fastapi/docs/plans/: 2025-12-03-spark-fastapi-design.md
spark-fastapi/tests/: README.md  conftest.py
spark-fastapi/tests/e2e/: test_real_spark_cluster.py
spark-fastapi/tests/integration/: test_app_endpoint.py  test_cluster_endpoints.py  test_error_cases.py  test_jobs_endpoints.py
spark-fastapi/tests/unit/: test_config.py  test_schemas.py  test_spark_client.py
(+20 files in other folders)
