[tool.poetry]
name = "spark-fastapi"
version = "0.1.0"
description = "Spark Cluster Monitoring and Job Submit API"
authors = ["hkkim"]
package-mode = true
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.5"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
